add Database migrations using flyway start with custom Security implementation